// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Balance > should render 1`] = `
<div>
  <div
    class="flex flex-row justify-center items-center py-2.5 px-8 space-x-2 md:flex-col md:justify-start md:items-start md:p-0 md:m-0 md:space-x-0 md:text-right md:bg-transparent dark:bg-black bg-theme-secondary-100 md:dark:bg-transparent"
  >
    <div
      class="whitespace-nowrap md:text-xs md:font-semibold text-theme-secondary-700 md:text-theme-secondary-500 dark:text-theme-secondary-500"
    >
      Your Balance
    </div>
    <div
      class="font-semibold text-theme-secondary-900 md:text-theme-secondary-text md:dark:text-theme-text dark:text-theme-secondary-200"
      data-testid="Balance__value"
    >
      <span
        class="whitespace-nowrap"
        data-testid="Amount"
      >
        0 BTC
      </span>
    </div>
  </div>
</div>
`;

exports[`Balance > should render loading state 1`] = `
<div>
  <div
    class="flex flex-row justify-center items-center py-2.5 px-8 -mt-3 space-x-2 md:flex-col md:justify-start md:items-start md:p-0 md:m-0 md:space-x-0 md:text-right md:bg-transparent dark:bg-black bg-theme-secondary-100 md:dark:bg-transparent"
  >
    <div
      class="whitespace-nowrap md:text-xs md:font-semibold text-theme-secondary-700 md:text-theme-secondary-500 dark:text-theme-secondary-500"
    >
      Your Balance
    </div>
    <div
      class="py-1"
    >
      <span
        aria-busy="true"
        aria-live="polite"
        class="flex overflow-hidden items-center w-auto max-w-full leading-none"
      >
        <span
          class="react-loading-skeleton"
          style="width: 60px; height: 16px;"
        >
          ‌
        </span>
        <br />
      </span>
    </div>
  </div>
</div>
`;
